--- a/src/style.less
+++ b/src/style.less
@@ -1,11 +1,157 @@
-body {
-  background: black
+@max-width: 700px;
+html, body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
+body {
+  background: url(/img/bg.jpeg) black;
+  font-family: helvetica;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+.user-icon() {
+  width: 79px;
+  height: 79px;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  margin-right: 1em;
+  float: left;
+  cursor: pointer;
+  background-repeat: no-repeat;
+}
+
+
 .gregflix {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(10deg, rgba(0, 0, 0, 0) 0%, rgba(57, 4, 4, 0.7595413165266106) 14%, rgba(0, 0, 0, 1) 70%);
   color: white;
-  text-align:center;
-  width:700px;
-  margin:0 auto;
-  margin-top:10vh;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding-top: 10vh;
+
+  .users {
+    max-width: @max-width;
+    padding-top: 3em;
+    margin: 0 auto;
+    display: table;
+
+    .avatar {
+      .user-icon;
+
+      color: rgba(0, 0, 0, 0);
+      transition: padding-top 0.5s ease, color 1s ease;
+
+      &:hover {
+        padding-top: 100px;
+        color: white;
+      }
+    }
+
+    .avatar-3 {
+      background-image: url('/img/avatar3.png');
+    }
+
+    .add-profile {
+      .user-icon;
+      background: none;
+      border: solid 2px white;
+      color: white;
+      font-size: 50px;
+
+      &:hover {
+        background: white;
+        color: black;
+        transition: background 0.5s ease;
+      }
+    }
+  }
+
+  .add-user {
+    top:-2000px;
+    opacity: 0;
+
+    &.visible {
+      top:0px;
+      opacity:1;
+      transition:top 2s ease-in, opacity 2s;
+    }
+
+    max-width: @max-width;
+    margin: 0 auto;
+
+
+    form {
+      padding: 3em;
+      padding-bottom:7em;
+      background:black;
+
+      input[type="text"], input[type="email"] {
+        padding: 15px 10px;
+      }
+
+      fieldset {
+        width: 100%;
+      }
+      input, button {
+        display: block;
+        margin-bottom: 1em;
+        width: 100%;
+        font-size: 30px;
+      }
+
+      button {
+        display: inline-block;
+        width: 200px;
+        float: right;
+        height: 2em;
+      }
+
+
+      .select-avatar {
+        border: none;
+
+        .avatar-1, .avatar-2, .avatar-3 {
+          .user-icon;
+          display: inline-block;
+          float:none;
+
+          input {
+           //display: none;
+          }
+
+          input:checked:before
+          {
+            border:solid 3px red;
+            width:77px;
+            height:75px;
+            content:"x";
+            color: rgba(0,0,0,0);
+            position:absolute;
+            margin-top:-3px;
+            margin-left:-6px;
+          }
+        }
+
+        .avatar-1 {
+          background: url('/img/avatar1.png');
+        }
+
+        .avatar-2 {
+          background: url('/img/avatar2.png');
+        }
+
+        .avatar-3 {
+          background: url('/img/avatar3.png');
+        }
+      }
+    }
+  }
+
 }
