--- a/src/style.less
+++ b/src/style.less
@@ -27,7 +27,17 @@ body {
 }
 
 
-.gregflix {
+#gregflix {
+  #content {
+    top:-100vh;
+    opacity:0;
+    transition:top 3s ease-in, opacity 5s ease-in;
+    &.loaded {
+      top:auto;
+      opacity:1;
+    }
+  }
+
   background: rgb(0, 0, 0);
   background: linear-gradient(10deg, rgba(0, 0, 0, 0) 0%, rgba(57, 4, 4, 0.7595413165266106) 14%, rgba(0, 0, 0, 1) 70%);
   color: white;
