--- a/src/style.less
+++ b/src/style.less
@@ -26,6 +26,17 @@ body {
   background-repeat: no-repeat;
 }
 
+.avatar-1 {
+  background: url('/img/avatar1.png');
+}
+
+.avatar-2 {
+  background: url('/img/avatar2.png');
+}
+
+.avatar-3 {
+  background: url('/img/avatar3.png');
+}
 
 #gregflix {
   #content {
@@ -38,27 +49,15 @@ body {
     }
   }
 
-
-  .avatar-1 {
-    background: url('/img/avatar1.png');
-  }
-
-  .avatar-2 {
-    background: url('/img/avatar2.png');
-  }
-
-  .avatar-3 {
-    background: url('/img/avatar3.png');
-  }
-
-
   background: rgb(0, 0, 0);
   background: linear-gradient(10deg, rgba(0, 0, 0, 0) 0%, rgba(57, 4, 4, 0.7595413165266106) 14%, rgba(0, 0, 0, 1) 70%);
   color: white;
   text-align: center;
   width: 100%;
   height: 100%;
-  padding-top: 10vh;
+  header.homepage {
+    padding-top: 10vh;
+  }
 
   .users {
     max-width: @max-width;
@@ -175,4 +174,6 @@ body {
     }
   }
 
+
+  @import "catalog";
 }
