--- a/src/catalog.less
+++ b/src/catalog.less
@@ -13,7 +13,7 @@
   #promoted {
     background: white;
     width:100%;
-    height:70vh;
+    height:80vh;
 
     #promoted-content-poster {
       background-size: cover;
@@ -62,5 +62,40 @@
         }
       }
     }
+  }
+
+
+  .section() {
+    background:black;
+    min-height:5vh;
+    padding-left:6em;
+    text-align:left;
+
+    h2 {
+      padding-top:1.5em;
+    }
+  }
+  #movies {
+    .section;
+    height:400px;
+
+    .movie {
+      cursor:pointer;
+      width:700px;
+      float: left;
+      img {
+        height:150px;
+        float:left;
+        margin-right:30px;
+      }
+
+      p {
+        margin-right:30px;
+      }
+    }
+  }
+
+  #tv-shows {
+    .section;
   }
 }
