--- a/src/style.less
+++ b/src/style.less
@@ -98,11 +98,12 @@ body {
   .add-user {
     top:-2000px;
     opacity: 0;
-
+    position:absolute;
     &.visible {
       top:0px;
       opacity:1;
-      transition:top 2s ease-in, opacity 2s;
+      transition:opacity 2s;
+      position:relative;
     }
 
     max-width: @max-width;
