--- a/src/style.less
+++ b/src/style.less
@@ -175,6 +175,23 @@ body {
     }
   }
 
+  .about {
+    position: fixed;
+    bottom:1em;
+    background: rgba(0,0,0,0.5);
+    padding:1.5em;
+    right:1em;
+    h4 {
+      font-size: 30px;
+      margin:0;
+      padding:0;
+    }
+
+    a {
+      color:white;
+      font-size:19px;
+    }
+  }
 
   @import "catalog";
   @import "playback";
