--- a/src/style.less
+++ b/src/style.less
@@ -181,15 +181,24 @@ body {
     background: rgba(0,0,0,0.5);
     padding:1.5em;
     right:1em;
+    font-size:1em;
+
     h4 {
-      font-size: 30px;
       margin:0;
       padding:0;
+      font-size:2em;
     }
 
     a {
       color:white;
       font-size:19px;
+    }
+
+    @media (max-width: 1000px) {
+      right:0;
+      font-size:2.5em;
+      h4 {
+      }
     }
   }
 
