--- a/src/catalog.less
+++ b/src/catalog.less
@@ -1,3 +1,4 @@
+@promoted-height: 50vw;
 .catalog {
   .logo {
     img {
@@ -12,29 +13,33 @@
 
   #promoted {
     background: white;
-    width:100%;
-    height:80vh;
+    width: 100%;
+    height: @promoted-height;
 
     #promoted-content-poster {
       background-size: cover;
-      width: 100%;
-      height: 100%;
-      top: -30px;
-      left: 0;
-      opacity:1;
-      transition:opacity 3s ease-in;
+      height: @promoted-height;
+      opacity: 1;
+      transition: opacity 3s ease-in;
+      background-position: bottom left;
     }
 
     #promoted-player {
-      position:absolute;
+      position: absolute;
+      height: @promoted-height;
+    }
+
+    #promoted-player {
+      position: absolute;
     }
 
     #promoted-player, video {
-      width:100%;
+      height: @promoted-height;
+      max-height:@promoted-height;
     }
 
     #promoted-player.hidden {
-      display:none;
+      display: none;
     }
 
     #promoted-content {
@@ -45,14 +50,14 @@
       background-image: linear-gradient(12deg, #000000 32%, rgba(0, 0, 0, 0) 100%);
       top: 0;
       width: 100%;
-      height: 80vh;
+      height: @promoted-height;
 
       header {
         bottom: 5em;
         position: absolute;
 
         h1 {
-          font-size:2em;
+          font-size: 2em;
         }
 
         p {
@@ -66,31 +71,33 @@
 
 
   .section() {
-    background:black;
-    min-height:5vh;
-    padding-left:6em;
-    text-align:left;
+    background: black;
+    min-height: 5vh;
+    padding-left: 6em;
+    text-align: left;
 
     h2 {
-      padding-top:1.5em;
+      padding-top: 1.5em;
     }
   }
+
   #movies {
     .section;
-    height:400px;
+    height: 400px;
 
     .movie {
-      cursor:pointer;
-      width:700px;
+      cursor: pointer;
+      width: 700px;
       float: left;
+
       img {
-        height:150px;
-        float:left;
-        margin-right:30px;
+        height: 150px;
+        float: left;
+        margin-right: 30px;
       }
 
       p {
-        margin-right:30px;
+        margin-right: 30px;
       }
     }
   }
