Logout when clicking on logo

--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,6 +1,6 @@
 <section id="content" class="loaded catalog">
     <header>
-        <a class="logo" href="/">
+        <a class="logo" href="/" id="link-to-home">
             <img src="/img/gregflix.png" alt="GregFlix logo"/>
         </a>
         <div class="user" id="user-profile"></div>
