--- a/src/templates/movie.html
+++ b/src/templates/movie.html
@@ -6,7 +6,6 @@
         <div class="user" id="user-profile"></div>
     </header>
     <section id="playback-content">
-        <video id="playback-player" class="hidden"></video>
-        </div>
+        <video id="playback-player" class="video-js" controls></video>
     </section>
 </section>
