--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -14,8 +14,6 @@
     <section id="movies">
         <h2>Movies</h2>
         <div id="movie-list"></div>
-    </section>
-    <section id="tv-shows">
-        <h2>TV Shows</h2>
+        <br style="clear:left" />
     </section>
 </section>
